# cpp-revival-project

./: .gitignore  .gitmodules  README.md
.github/workflows/: cpm.yaml  craft.yaml
cpm/: Makefile
cpm/include/: cmdline.hpp  cpm.hpp  project.hpp
cpm/src/: cmdline.cpp  cpm.cpp  main.cpp  project.cpp
craft/: Cargo.toml
craft/include/: cmdline.hpp  craft.hpp  project.hpp
craft/src/: cmdline.cpp  craft.cpp  lib.rs  main.cpp  main.rs  parse.rs  project.cpp  project.rs
uml/cpm/: cpm.drawio
webcraft/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  helloworld.txt  readme.md  vcpkg-configuration.json  vcpkg.json
webcraft/include/webcraft/: app.hpp  concepts.hpp  context.hpp  dto.hpp  webcraft.hpp
webcraft/include/webcraft/async/: awaitable.hpp  config.hpp  executors.hpp  join_handle.hpp  platform.hpp  runtime.hpp  timer_service.hpp  workers.hpp
webcraft/src/: linux.cpp  main.cpp  windows.cpp
webcraft/src/webcraft/: app.cpp  runtime.cpp
webcraft/uml/: asyncruntime.md
webcraft/umls/: asyncruntime.md
